--- a/views/index.ejs
+++ b/views/index.ejs
@@ -279,8 +279,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="about-content text-center">
-                        <h2>Discover your city with <br><span>Dorne</span></h2>
-                        <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce quis tempus elit. Sed efficitur tortor neque, vitae aliquet urna varius sit amet. Ut rhoncus, nunc nec tincidunt volutpat, ex libero.</p>
+                        <!-- <h2>Discover your city with <br><span>Dorne</span></h2> -->
+                        <!-- <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce quis tempus elit. Sed efficitur tortor neque, vitae aliquet urna varius sit amet. Ut rhoncus, nunc nec tincidunt volutpat, ex libero.</p> -->
                     </div>
                 </div>
             </div>
@@ -295,7 +295,7 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <span></span>
-                        <h4>Cities you must see</h4>
+                        <h4>Cities Recommended</h4>
                         <p>Editor’s pick</p>
                     </div>
                 </div>
@@ -307,8 +307,8 @@
                         <img src="img/bg-img/editor-1.jpg" alt="">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="#">New York</a>
-                                <a href="#">1643 Destinations</a>
+                                <a href="#">Bangkok</a>
+                                <a href="#">Thailand</a>
                             </div>
                             <div class="add-more">
                                 <a href="#">+</a>
@@ -321,8 +321,8 @@
                         <img src="img/bg-img/editor-2.jpg" alt="">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="#">Barcelona</a>
-                                <a href="#">943 Destinations</a>
+                                <a href="#">Nonthaburi</a>
+                                <a href="#">Thailand</a>
                             </div>
                             <div class="add-more">
                                 <a href="#">+</a>
@@ -333,8 +333,8 @@
                         <img src="img/bg-img/editor-3.jpg" alt="">
                         <div class="editors-pick-info">
                             <div class="places-total-destinations d-flex">
-                                <a href="#">paris</a>
-                                <a href="#">243 Destinations</a>
+                                <a href="#">Ayutthaya</a>
+                                <a href="#">Thailand</a>
                             </div>
                             <div class="add-more">
                                 <a href="#">+</a>
@@ -354,7 +354,7 @@
                 <div class="col-12">
                     <div class="section-heading dark text-center">
                         <span></span>
-                        <h4>Featured destinations</h4>
+                        <h4>Featured Hotels</h4>
                         <p>Editor’s pick</p>
                     </div>
                 </div>
