--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -51,32 +51,35 @@
             <div class="row h-100">
                 <div class="col-12 h-100">
                     <nav class="h-100 navbar navbar-expand-lg">
-                        <a class="navbar-brand" href="/"><img src="img/core-img/logo.png" alt=""></a>
+                        <!-- <a class="navbar-brand" href="/"><img src="img/core-img/logo.png" alt=""></a> -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
                         <!-- Nav -->
                         <div class="collapse navbar-collapse" id="dorneNav">
                             <ul class="navbar-nav mr-auto" id="dorneMenu">
-                                <li class="nav-item">
+                                <li class="nav-item ">
                                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item active dropdown">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="explorer">Explore <span class="sr-only">(current)</span></a>
+                                </li>
+                                <!-- <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Explore <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                         <a class="dropdown-item" href="/">Home</a>
-                                        <a class="dropdown-item" href="explore">Explore</a>
+                                        <a class="dropdown-item" href="explorer">Explore</a>
                                         <a class="dropdown-item" href="listing">Listing</a>
                                         <a class="dropdown-item" href="single-listing">Single Listing</a>
                                         <a class="dropdown-item" href="contact">Contact</a>
                                     </div>
-                                </li>
+                                </li> -->
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listings <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="/">Home</a>
-                                        <a class="dropdown-item" href="explore">Explore</a>
+                                        <!-- <a class="dropdown-item" href="/">Home</a> -->
+                                        <!-- <a class="dropdown-item" href="explore">Explore</a> -->
                                         <a class="dropdown-item" href="listing">Listing</a>
                                         <a class="dropdown-item" href="single-listing">Single Listing</a>
-                                        <a class="dropdown-item" href="contact">Contact</a>
+                                        <!-- <a class="dropdown-item" href="contact">Contact</a> -->
                                     </div>
                                 </li>
                                 <li class="nav-item">
@@ -88,13 +91,13 @@
                                 <a id="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i> Search</a>
                             </div>
                             <!-- Signin btn -->
-                            <div class="dorne-signin-btn">
+                            <!-- <div class="dorne-signin-btn">
                                 <a href="#">Sign in  or Register</a>
-                            </div>
+                            </div> -->
                             <!-- Add listings btn -->
-                            <div class="dorne-add-listings-btn">
+                            <!-- <div class="dorne-add-listings-btn">
                                 <a href="#" class="btn dorne-btn">+ Add Listings</a>
-                            </div>
+                            </div> -->
                         </div>
                     </nav>
                 </div>
@@ -365,7 +368,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
     <!-- Google Maps js -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk9KNSL1jTv4MY9Pza6w8DJkpI_nHyCnk"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdVg54QthqEizFpV7yGjQCJfHRFP3PnW0"></script>
     <script src="js/google-map/explore-map-active.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
