--- a/views/index.ejs
+++ b/views/index.ejs
@@ -365,15 +365,15 @@
                     <div class="features-slides owl-carousel">
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-1.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
                             <!-- Price -->
                             <div class="price-start">
-                                <p>FROM $59/night</p>
+                                <p>FROM 2800-9000 THB</p>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Ibiza</h5>
-                                    <p>Party</p>
+                                    <h5>Lantana Resort</h5>
+                                    <p>Bangkok</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -382,15 +382,15 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-2.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
                             <!-- Price -->
                             <div class="price-start">
-                                <p>FROM $59/night</p>
+                                <p>FROM 500-3000 THB</p>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Paris</h5>
-                                    <p>Luxury</p>
+                                    <h5>The Countryside Resort</h5>
+                                    <p>Maehongson</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -399,15 +399,15 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-3.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
                             <!-- Price -->
                             <div class="price-start">
-                                <p>FROM $59/night</p>
+                                <p>FROM 1000-3000 THB</p>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Lake Como</h5>
-                                    <p>Spectacular</p>
+                                    <h5>Krabifrontbay Resort</h5>
+                                    <p>Krabi</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -416,15 +416,15 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-4.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012357_3.jpg" alt="">
                             <!-- Price -->
                             <div class="price-start">
-                                <p>FROM $59/night</p>
+                                <p>FROM 1600-4000 THB</p>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Greece</h5>
-                                    <p>Sunny</p>
+                                    <h5>Krin Resort</h5>
+                                    <p>petchaboon</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -433,15 +433,15 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-5.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012342_2.jpg" alt="">
                             <!-- Price -->
                             <div class="price-start">
-                                <p>FROM $59/night</p>
+                                <p>FROM 500-1500 THB</p>
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Norway</h5>
-                                    <p>All Year round</p>
+                                    <h5>Kiangchan Resort</h5>
+                                    <p>Chumphon</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -473,7 +473,7 @@
                     <div class="features-slides owl-carousel">
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-6.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08012272_1.jpeg" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <a href="#">8.5</a>
@@ -481,8 +481,8 @@
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Martha’s bar</h5>
-                                    <p>Manhathan</p>
+                                    <h5>Treat Cafe & Hang Out</h5>
+                                    <p>Bangkok</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -491,7 +491,7 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-7.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013955_1.png" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <a href="#">9.5</a>
@@ -499,8 +499,8 @@
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Delux Restaurant</h5>
-                                    <p>Paris</p>
+                                    <h5>Cafe Jardin</h5>
+                                    <p>Bangkok</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -509,7 +509,7 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-8.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013903_1.png" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <a href="#">8.2</a>
@@ -517,8 +517,8 @@
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Jim’s corner Pub</h5>
-                                    <p>Madrid</p>
+                                    <h5>SEIRYU Sushi</h5>
+                                    <p>Bangkok</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -527,7 +527,7 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-9.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013963_1.png" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <a href="#">8.7</a>
@@ -535,8 +535,8 @@
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>tower Risto bar</h5>
-                                    <p>Sydney</p>
+                                    <h5>9ban Cafe & Kanom Thai</h5>
+                                    <p>Songkla</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -545,7 +545,7 @@
                         </div>
                         <!-- Single Features Area -->
                         <div class="single-features-area">
-                            <img src="img/bg-img/feature-10.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013835_1.jpg" alt="">
                             <!-- Rating & Map Area -->
                             <div class="ratings-map-area d-flex">
                                 <a href="#">9.8</a>
@@ -553,8 +553,8 @@
                             </div>
                             <div class="feature-content d-flex align-items-center justify-content-between">
                                 <div class="feature-title">
-                                    <h5>Pizzeria venezia</h5>
-                                    <p>Hong Kong</p>
+                                    <h5>Bicycle Cafe</h5>
+                                    <p>Kanjanaburi</p>
                                 </div>
                                 <div class="feature-favourite">
                                     <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -569,7 +569,7 @@
     <!-- ***** Features Restaurant Area End ***** -->
 
     <!-- ***** Features Events Area Start ***** -->
-    <section class="dorne-features-events-area bg-img bg-overlay-9 section-padding-100-50" style="background-image: url(img/bg-img/hero-3.jpg)">
+    <!-- <section class="dorne-features-events-area bg-img bg-overlay-9 section-padding-100-50" style="background-image: url(img/bg-img/hero-3.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -585,16 +585,16 @@
                 <div class="col-12 col-lg-6">
                     <div class="single-feature-events-area d-sm-flex align-items-center wow fadeInUpBig" data-wow-delay="0.2s">
                         <div class="feature-events-thumb">
-                            <img src="img/bg-img/event-1.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/Event/Picture/E0001403.jpg" alt="">
                             <div class="date-map-area d-flex">
                                 <a href="#">26 Nov</a>
                                 <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                         </div>
                         <div class="feature-events-content">
-                            <h5>Jazz Concert</h5>
-                            <h6>Manhathan</h6>
-                            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra...</p>
+                            <h5>ประเพณีลอยกระทงกาบกล้วย</h5>
+                            <h6>แม่กลอง</h6>
+                            <p></p>
                         </div>
                         <div class="feature-events-details-btn">
                             <a href="#">+</a>
@@ -604,16 +604,16 @@
                 <div class="col-12 col-lg-6">
                     <div class="single-feature-events-area d-sm-flex align-items-center wow fadeInUpBig" data-wow-delay="0.3s">
                         <div class="feature-events-thumb">
-                            <img src="img/bg-img/event-2.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/Event/Picture/E0001803.jpg" alt="">
                             <div class="date-map-area d-flex">
                                 <a href="#">26 Nov</a>
                                 <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                         </div>
                         <div class="feature-events-content">
-                            <h5>DeeJay in the house</h5>
-                            <h6>Manhathan</h6>
-                            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra...</p>
+                            <h5>ประเพณีลอยกระทง</h5>
+                            <h6>สุโขทัย</h6>
+                            <p></p>
                         </div>
                         <div class="feature-events-details-btn">
                             <a href="#">+</a>
@@ -623,16 +623,16 @@
                 <div class="col-12 col-lg-6">
                     <div class="single-feature-events-area d-sm-flex align-items-center wow fadeInUpBig" data-wow-delay="0.4s">
                         <div class="feature-events-thumb">
-                            <img src="img/bg-img/event-3.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/Event/Picture/E0001802.jpg" alt="">
                             <div class="date-map-area d-flex">
                                 <a href="#">26 Nov</a>
                                 <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                         </div>
                         <div class="feature-events-content">
-                            <h5>Theatre Night outside</h5>
-                            <h6>Manhathan</h6>
-                            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra...</p>
+                            <h5>ประเพณียี่เป็งเชียงใหม่</h5>
+                            <h6>เชียงใหม่</h6>
+                            <p></p>
                         </div>
                         <div class="feature-events-details-btn">
                             <a href="#">+</a>
@@ -642,16 +642,16 @@
                 <div class="col-12 col-lg-6">
                     <div class="single-feature-events-area d-sm-flex align-items-center wow fadeInUpBig" data-wow-delay="0.5s">
                         <div class="feature-events-thumb">
-                            <img src="img/bg-img/event-4.jpg" alt="">
+                            <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/Event/Picture/E0001807.jpg" alt="">
                             <div class="date-map-area d-flex">
                                 <a href="#">26 Nov</a>
                                 <a href="#"><img src="img/core-img/map.png" alt=""></a>
                             </div>
                         </div>
                         <div class="feature-events-content">
-                            <h5>Wine tasting</h5>
-                            <h6>Manhathan</h6>
-                            <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra...</p>
+                            <h5>งานสีสันแห่งสายน้ำ</h5>
+                            <h6>อยุธยา</h6>
+                            <p></p>
                         </div>
                         <div class="feature-events-details-btn">
                             <a href="#">+</a>
@@ -698,7 +698,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- ***** Features Events Area End ***** -->
 
     <!-- ***** Clients Area Start ***** -->
@@ -727,7 +727,7 @@
                     <div class="footer-text">
                         <p>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
