--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
-    <title>Discover &amp; Chill</title>
+    <title>Discover Place</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -113,7 +113,7 @@
                 <div class="col-12 col-md-10">
                     <div class="hero-content">
                         <h2>Discover Place</h2>
-                        <h4>For You</h4>
+                        <h4>Nearby Place Around You</h4>
                     </div>
                     
                     <div class="hero-search-form">
